--- a/gradle.properties
+++ b/gradle.properties
@@ -24,21 +24,22 @@ android.nonTransitiveRClass=true
 
 
 #pulishing
-GROUP=com.qwuiteam
+GROUP=io.github.hy-liuyuzhe
 POM_ARTIFACT_ID=qwui
 VERSION_NAME=1.0.1
 
 POM_NAME=QWUI
+POM_DESCRIPTION=A simple and rich Android UI library.
 POM_INCEPTION_YEAR=2022
-POM_URL=https://github.com/hy-liuyuzhe/hy_lyz/
+POM_URL=https://github.com/hy-liuyuzhe/QWUI_Android/
 
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENSE_DIST=repo
 
-POM_SCM_URL=https://github.com/hy-liuyuzhe/hy_lyz/
-POM_SCM_CONNECTION=scm:git:git://github.com/hy-liuyuzhe/hy_lyz.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/hy-liuyuzhe/hy_lyz.git
+POM_SCM_URL=https://github.com/hy-liuyuzhe/QWUI_Android/
+POM_SCM_CONNECTION=scm:git:git://github.com/hy-liuyuzhe/QWUI_Android.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/hy-liuyuzhe/QWUI_Android.git
 
 POM_DEVELOPER_ID=liuyuzhedev
 POM_DEVELOPER_NAME=liuyuzhe
