--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,11 @@ android {
 }
 
 dependencies {
-    implementation project(':qwui')
+//    implementation project(':qwui')
+    implementation 'io.github.hy-liuyuzhe:qwui:1.0.2'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    api 'com.blankj:utilcodex:1.30.6'
 }
