--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.qwuiteam.project">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,15 +11,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QWUI_Android">
         <activity
-            android:name=".HomeActivity"
-            android:exported="true" >
+            android:name=".SimpleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
