--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        maven { url 'https://jitpack.io' }
     }
     plugins.withId("com.vanniktech.maven.publish") {
         mavenPublish {
