--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
     }
 
     buildTypes {
@@ -30,10 +33,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
+    api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+
     implementation project(':qwui')
 //    implementation 'io.github.hy-liuyuzhe:qwui:1.0.2'
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -47,5 +56,6 @@ dependencies {
     api rootProject.ext.dependencies.glide
     api rootProject.ext.dependencies.glide_transformations
     kapt rootProject.ext.dependencies.annotation_glide
+    api 'com.google.firebase:firebase-auth:21.0.2'
 
 }
