--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
-    implementation project(':qwui')
+//    implementation project(':qwui')
 //    implementation 'io.github.hy-liuyuzhe:qwui:1.0.2'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -56,13 +56,21 @@ dependencies {
 
     implementation 'com.blankj:utilcodex:1.30.6'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
+    implementation 'com.hi-dhl:binding:1.1.5'
+    //canary
+    compile 'com.github.markzhai:blockcanary-android:1.5.0'
     //glide
     api rootProject.ext.dependencies.glide
     api rootProject.ext.dependencies.glide_transformations
     kapt rootProject.ext.dependencies.annotation_glide
     api 'com.google.firebase:firebase-auth:21.0.2'
+    //ui
+    implementation 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.4'
+    implementation 'io.github.jeremyliao:live-event-bus-x:1.8.0'
+    implementation 'com.netease.nimlib:basesdk:8.10.0'
+    implementation 'com.netease.nimlib:push:8.10.0'
 
-    implementation 'com.hi-dhl:binding:1.1.5'
+
 
 
 }
