--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply from: "version.gradle"
 buildscript {
 
     ext {
-        kotlin_version = "1.5.31"
+        kotlin_version = "1.5.30"
     }
     repositories {
         mavenCentral()
@@ -12,7 +12,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0'
     }
 }
