--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
-//    implementation project(':qwui')
+//    api project(':qwui')
 //    implementation 'io.github.hy-liuyuzhe:qwui:1.0.2'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -73,6 +73,6 @@ dependencies {
 //    implementation 'com.netease.nimlib:push:8.10.0'
 
     //ffmpag
-    implementation 'com.arthenica:ffmpeg-kit-full:4.5.1-1'
+    implementation 'com.arthenica:ffmpeg-kit-full-gpl:4.5.1'
 
 }
