[feature_1.0.4.0] 1.sheet dialog
Signed-off-by: liuyuzhe <15313482685@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         android:theme="@style/Theme.QWUI_Android">
         <activity
             android:name=".SimpleActivity"
+            android:launchMode="singleTask"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
