--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     api 'com.google.firebase:firebase-auth:21.0.2'
     //ui
     implementation 'io.github.lucksiege:pictureselector:v2.6.1'
+    implementation 'com.github.yyued:SVGAPlayer-Android:2.6.1'
 
 //    implementation 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.4'
 //    implementation 'io.github.jeremyliao:live-event-bus-x:1.8.0'
