--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'io.github.lucksiege:pictureselector:v2.6.1'
     implementation 'com.github.yyued:SVGAPlayer-Android:2.6.1'
 
-//    implementation 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.4'
+    implementation 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.4'
 //    implementation 'io.github.jeremyliao:live-event-bus-x:1.8.0'
 //    implementation 'com.netease.nimlib:basesdk:8.10.0'
 //    implementation 'com.netease.nimlib:push:8.10.0'
