--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        jcenter()
     }
 
     dependencies {
@@ -21,6 +22,7 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        jcenter()
         maven { url 'https://jitpack.io' }
     }
     plugins.withId("com.vanniktech.maven.publish") {
