--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+
 
     implementation 'com.blankj:utilcodex:1.30.6'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
