--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
-//    implementation project(':qwui')
+    implementation project(':voice')
 //    implementation 'io.github.hy-liuyuzhe:qwui:1.0.2'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -72,7 +72,6 @@ dependencies {
 
     implementation 'io.github.lucksiege:pictureselector:v2.6.1'
 
-
-
+    api 'io.agora.rtc:voice-sdk:3.7.1'
 
 }
