--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,20 @@ android {
         dataBinding = true
         viewBinding = true
     }
+
+    bundle {
+        language {
+            // This property is set to true by default.
+            // You can specify `false` to turn off
+            // generating configuration APKs for language resources.
+            // These resources are instead packaged with each base and
+            // feature APK.
+            // Continue reading below to learn about situations when an app
+            // might change setting to `false`, otherwise consider leaving
+            // the default on for more optimized downloads.
+            enableSplit = false
+        }
+    }
 }
 
 dependencies {
