--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,5 +107,8 @@ dependencies {
     implementation 'com.arthenica:ffmpeg-kit-full-gpl:4.5.1'
     //xlog
     implementation 'com.tencent.mars:mars-xlog:1.2.5'
+    //rxjava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
 }
