--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    implementation project(path: ':lib')
+
 }
